Part1/Exercise 1.08 Project v0.5/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-webserver-service
spec:
  selector:
    app: node-webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4173  
  type: ClusterIP
